overflow and z-index fixes

--- a/ui.frontend/src/main/webpack/core-components/tabs/scss/styles/_cornish.scss
+++ b/ui.frontend/src/main/webpack/core-components/tabs/scss/styles/_cornish.scss
@@ -126,6 +126,7 @@
     
     #wrapper {
         background-color: white;
+        z-index: 9999;
         &:after {
             content: "";
             background-image: url('data:image/svg+xml,<svg id="scrollMore" width="30" height="58" viewBox="0 0 30 58" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M30 0C13.4186 0.257978 0 13.1104 0 29C-2.68079e-06 44.8896 13.4186 57.742 30 58V0Z" fill="%23DDDDDE"/><path d="M30 1.9668C14.5086 2.22438 2.03394 14.229 2.03394 29.0002C2.03394 43.7713 14.5086 55.7759 30 56.0335V1.9668Z" fill="white"/><path d="M15 23L21 29L15 35" stroke="%23DDDDDE" stroke-width="2"/></svg>');
@@ -143,12 +144,15 @@
             &:before {
                 content: "";
                 display: block;
-                width: 300vw;
+                width: 400vw;
                 height: 2px;
                 box-shadow: 0px 2px 3px 0px #e5e5e5;
                 position: absolute;
                 bottom: 0;
-                left: -50%;
+                top: 0;
+                left: -100%;
+                background: white;
+                height: 100%;
             }
         }
     }
